Minor ideas descriptions changes

--- a/localisation/cot_ideas_l_english.yml
+++ b/localisation/cot_ideas_l_english.yml
@@ -36,7 +36,7 @@
  adm2_6_a:0 "National Universities"
  adm2_6_a_desc:0 "Our search for talent in unlikely places has led to the creation of institutes of higher education free from dogma, leading to an abundance of talent eager to help the country that provided them an opportunity."
  adm2_7_a:0 "Multicultural Talent"
- adm2_7_a_desc:0 "By diversifying our outlook beyond conventional wisdom we have begun to find a wealth of talent in our realm we may have otherwise overlooked.\n§JSmall racial minorities give +0.1 local goods produced. Large racial minorities give +0.25 local goods produced§!"
+ adm2_7_a_desc:0 "By diversifying our outlook beyond conventional wisdom we have begun to find a wealth of talent in our realm we may have otherwise overlooked.\n§JSmall racial minorities give +0.10 local goods produced\nLarge racial minorities give +0.25 local goods produced§!"
  
  ##### OATH OF EXPANSION #####
  
@@ -70,7 +70,7 @@
  adm4_4_a:0 "Intergovernmental Networking"
  adm4_4_a_desc:0 "Though it may sound boring, if we utilize the influence of our loyal estates to advance our government structure, we will benefit greatly as the forefront of bureaucratic efficiency."
  adm4_5_a:0 "Centralized Capital Complex"
- adm4_5_a_desc:0 "Our governmental investments have drawn many from all around, from officials to diplomats and beyond, leading to an immense Capital Complex that has become synonymous with our Country ruling structure.\n§JCapital state gets -25% Local Development Cost, +25% Local Goods Produced, +25% Local Trade Power, +50% Local Tax Modifier§!"
+ adm4_5_a_desc:0 "Our governmental investments have drawn many from all around, from officials to diplomats and beyond, leading to an immense Capital Complex that has become synonymous with our Country ruling structure.\n§JCapital state gets:\n-25% Local Development Cost\n+25% Local Goods Produced\n+25% Local Trade Power\n+50% Local Tax Modifier§!"
  adm4_6_a:0 "A Chief of State"
  adm4_6_a_desc:0 "By expanding the office of the Ruler and appointing a learned and trusted Chief of State, our ruler can more efficiently tackle the large challenges of administration."
  adm4_7_a:0 "Governmental Regulation"
