Idea flags rework (split into set flag and tier flag)

--- a/localisation/CoT_i_nations_l_english.yml
+++ b/localisation/CoT_i_nations_l_english.yml
@@ -71,7 +71,7 @@
  
  # Formable Decision Loc
  sorncost_nation_title:0 "Reclaim the Sorncost Duchy"
- vinlorn_nation_title:0 "Unite the Winelods!"
+ vinlorn_nation_title:0 "Unite the Winelords!"
  rosenica_nation_title:0 "Unite Rosenica"
  sottlan_nation_title:0 "Sottlan Forever"
  nottlan_nation_title:0 "Nottlan Together"
