--- a/localisation/domination_l_english.yml
+++ b/localisation/domination_l_english.yml
@@ -7195,7 +7195,7 @@
  geobukseon_ship:0 "Bonus from Geobukseon"
  man_of_war_ship:0 "Bonus from Man o' War"
  galleon_ship:0 "Bonus from Galleon"
- galleass_ship:0 "Bonus from Galleass"
+ galleass_ship:0 "Bonus from Thornë"
  caravel_ship:0 "Bonus from Caravel"
  voc_indiamen_ship:0 "Bonus from Sunchaser"
  
