--- a/localisation/tmm_l_english.yml
+++ b/localisation/tmm_l_english.yml
@@ -2051,19 +2051,19 @@
  galleon_modifier:0 "Galleon Hired"
  HAVE_AT_LEAST_GALLEON_THAN:0 "Have at least §Y$VALUE$§! Galleons.\n"
  MODIFIER_AMOUNT_OF_GALLEON:0 "Galleon Force Limit"
- GALLEASS_NAME:0 "Galleass $NAME$"
- MODIFIER_ALLOWED_GALLEASS_FRACTION:0 "Galleass Force Limit"
- MODIFIER_LOCAL_HAS_GALLEASS:0 "Province Allows Galleass Ships"
- GALLEASS_FORCELIMIT:0 "We can recruit up to $LIMIT|Y$ §GGalleass§! owing to:\n$FLAMOUNT|Y$ from $PERC|%Y$ of our naval force-limit of $FL$:\n"
- GALLEASS_LIMIT_CULTURE:1 "$PROVINCE$ does not have a Dock or Shipyard, so you can not recruit Galleass Ships here."
- ADD_GALLEASS_SUB_UNIT_EFFECT:0 "Get '§GGalleass§!' $UNIT$ in $WHERE|Y$."
- GALLEASS_DESC:0 "A Galleass is a higher and larger ship compared to galleys, but it also combines its speed with the sea-worthiness and artillery power of a galleon.\nRelatively few galleasses were built in Italy from the 15th to 17th centuries, mainly by Venice, but they proved to be key in the main naval engagements in the Mediterranean, such as the battle of Lepanto.\nThe number of Galleasses that can be built depends on the Naval Tradition and can be constructed from coasts that have docks or shipyards."
- REGCAT_galleass:0 "Galleass"
- GALLEASS_REGIMENT:0 "Galleass Ship\n$EFFECT$"
- HAVE_LESS_GALLEASS_THAN:0 "Have less Galleasses than §Y$VALUE$§!.\n"
- galleass_modifier:0 "Galleass Hired"
- HAVE_AT_LEAST_GALLEASS_THAN:0 "Have at least §Y$VALUE$§! Galleasses.\n"
- MODIFIER_AMOUNT_OF_GALLEASS:0 "Galleass Force Limit"
+ GALLEASS_NAME:0 "Thornë $NAME$"
+ MODIFIER_ALLOWED_GALLEASS_FRACTION:0 "Thornë Force Limit"
+ MODIFIER_LOCAL_HAS_GALLEASS:0 "Province Allows Thornë Ships"
+ GALLEASS_FORCELIMIT:0 "We can recruit up to $LIMIT|Y$ §GThornë§! owing to:\n$FLAMOUNT|Y$ from $PERC|%Y$ of our naval force-limit of $FL$:\n"
+ GALLEASS_LIMIT_CULTURE:1 "$PROVINCE$ does not have a Dock or Shipyard, so you can not recruit Thornë Ships here."
+ ADD_GALLEASS_SUB_UNIT_EFFECT:0 "Get '§GThornë§!' $UNIT$ in $WHERE|Y$."
+ GALLEASS_DESC:0 "A Thornë is a higher and larger ship compared to galleys, but it also combines its speed with the sea-worthiness and artillery power of a galleon.\nRelatively few galleasses were built in Italy from the 15th to 17th centuries, mainly by Venice, but they proved to be key in the main naval engagements in the Mediterranean, such as the battle of Lepanto.\nThe number of Galleasses that can be built depends on the Naval Tradition and can be constructed from coasts that have docks or shipyards."
+ REGCAT_galleass:0 "Thornë"
+ GALLEASS_REGIMENT:0 "Thornë Ship\n$EFFECT$"
+ HAVE_LESS_GALLEASS_THAN:0 "Have less Thornë than §Y$VALUE$§!.\n"
+ galleass_modifier:0 "Thornë Hired"
+ HAVE_AT_LEAST_GALLEASS_THAN:0 "Have at least §Y$VALUE$§! Thornë.\n"
+ MODIFIER_AMOUNT_OF_GALLEASS:0 "Thornë Force Limit"
  CARAVEL_NAME:0 "Caravel $NAME$"
  MODIFIER_ALLOWED_CARAVEL_FRACTION:0 "Caravel Force Limit"
  MODIFIER_LOCAL_HAS_CARAVEL:0 "Province Allows Caravel Ships"
@@ -2148,7 +2148,7 @@
  ONLY_GEOBUKSEON_MODIFIER:0 "§YAffects only Geobukseon Ships§!"
  ONLY_MAN_OF_WAR_MODIFIER:0 "§YAffects only Man of War Ships§!"
  ONLY_GALLEON_MODIFIER:0 "§YAffects only Galleon Ships§!"
- ONLY_GALLEASS_MODIFIER:0 "§YAffects only Galleass Ships§!"
+ ONLY_GALLEASS_MODIFIER:0 "§YAffects only Thornë Ships§!"
  ONLY_CARAVEL_MODIFIER:0 "§YAffects only Caravel Ships§!"
  ONLY_VOC_INDIAMEN_MODIFIER:0 "§YAffects only Sunchaser Ships§!"
  CONFIRM_RESET_DEBATE:0 "Confirm Cancel Debate"
