--- a/localisation/goose_1_35_l_english.yml
+++ b/localisation/goose_1_35_l_english.yml
@@ -78,7 +78,7 @@
  MODIFIER_HAS_GEOBUKSEON:0 "Country Allows Geobukseon Ships"
  MODIFIER_HAS_MAN_OF_WAR:0 "Country Allows Man Of War Ships"
  MODIFIER_HAS_GALLEON:0 "Country Allows Galleon Ships"
- MODIFIER_HAS_GALLEASSE:0 "Country Allows Galleass Ships"
+ MODIFIER_HAS_GALLEASSE:0 "Country Allows Thornë Ships"
  MODIFIER_HAS_CARAVEL:0 "Country Allows Caravel Ships"
  MODIFIER_HAS_VOC_INDIAMEN:0 "Country Allows Sunchaser Ships"
  automatic_seat_in_parliament_abs_impact:0 "Automatic Assignment of a Parliament Seat: $VAL$ per $SCALE$ development.\n"
