--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -453,59 +453,6 @@
  A78_idea_7_3:0 "Roilsardi 7"
  A78_idea_7_3_desc:0 "Roilsardi 7 desc" 
 
- B78_ideas_1:0 "Carnetori Ideas 1"
- B78_ideas_1_start:0 "Carnetori Traditions 1"
- B78_ideas_1_bonus:0 "Carnetori Ambition 1"
- B78_idea_1_1:0 "Carnetori 1"
- B78_idea_1_1_desc:0 "Carnetori 1 desc"
- B78_idea_2_1:0 "Carnetori 2"
- B78_idea_2_1_desc:0 "Carnetori 2 desc"
- B78_idea_3_1:0 "Carnetori 3"
- B78_idea_3_1_desc:0 "Carnetori 3 desc"
- B78_idea_4_1:0 "Carnetori 4"
- B78_idea_4_1_desc:0 "Carnetori 4 desc"
- B78_idea_5_1:0 "Carnetori 5"
- B78_idea_5_1_desc:0 "Carnetori 5 desc"
- B78_idea_6_1:0 "Carnetori 6"
- B78_idea_6_1_desc:0 "Carnetori 6 desc"
- B78_idea_7_1:0 "Carnetori 7"
- B78_idea_7_1_desc:0 "Carnetori 7 desc" 
-
- B78_ideas_2:0 "Carnetori Ideas 2"
- B78_ideas_2_start:0 "Carnetori Traditions 2"
- B78_ideas_2_bonus:0 "Carnetori Ambition 2"
- B78_idea_1_2:0 "Carnetori 1"
- B78_idea_1_2_desc:0 "Carnetori 1 desc"
- B78_idea_2_2:0 "Carnetori 2"
- B78_idea_2_2_desc:0 "Carnetori 2 desc"
- B78_idea_3_2:0 "Carnetori 3"
- B78_idea_3_2_desc:0 "Carnetori 3 desc"
- B78_idea_4_2:0 "Carnetori 4"
- B78_idea_4_2_desc:0 "Carnetori 4 desc"
- B78_idea_5_2:0 "Carnetori 5"
- B78_idea_5_2_desc:0 "Carnetori 5 desc"
- B78_idea_6_2:0 "Carnetori 6"
- B78_idea_6_2_desc:0 "Carnetori 6 desc"
- B78_idea_7_2:0 "Carnetori 7"
- B78_idea_7_2_desc:0 "Carnetori 7 desc" 
-
- B78_ideas_3:0 "Carnetori Ideas 3"
- B78_ideas_3_start:0 "Carnetori Traditions 3"
- B78_ideas_3_bonus:0 "Carnetori Ambition 3"
- B78_idea_1_3:0 "Carnetori 1"
- B78_idea_1_3_desc:0 "Carnetori 1 desc"
- B78_idea_2_3:0 "Carnetori 2"
- B78_idea_2_3_desc:0 "Carnetori 2 desc"
- B78_idea_3_3:0 "Carnetori 3"
- B78_idea_3_3_desc:0 "Carnetori 3 desc"
- B78_idea_4_3:0 "Carnetori 4"
- B78_idea_4_3_desc:0 "Carnetori 4 desc"
- B78_idea_5_3:0 "Carnetori 5"
- B78_idea_5_3_desc:0 "Carnetori 5 desc"
- B78_idea_6_3:0 "Carnetori 6"
- B78_idea_6_3_desc:0 "Carnetori 6 desc"
- B78_idea_7_3:0 "Carnetori 7"
- B78_idea_7_3_desc:0 "Carnetori 7 desc" 
 
  C00_ideas_1:0 "Lencori Colonial Ideas 1"
  C00_ideas_1_start:0 "Lencori Colonial Traditions 1"
@@ -2025,3 +1972,78 @@
  B36_idea_6_3_desc:0 "Marrhold 6 desc"
  B36_idea_7_3:0 "Marrhold 7"
  B36_idea_7_3_desc:0 "Marrhold 7 desc"
+
+
+ ##### DAMERIAN #####
+
+ A58_ideas_3:0 "Damerian Ideas 3"
+ A58_ideas_3_start:0 "Damerian Traditions 3"
+ A58_ideas_3_bonus:0 "Damerian Ambition 3"
+ A58_idea_1_3:0 "Damerian 1"
+ A58_idea_1_3_desc:0 "Damerian 1 desc"
+ A58_idea_2_3:0 "Damerian 2"
+ A58_idea_2_3_desc:0 "Damerian 2 desc"
+ A58_idea_3_3:0 "Damerian 3"
+ A58_idea_3_3_desc:0 "Damerian 3 desc"
+ A58_idea_4_3:0 "Damerian 4"
+ A58_idea_4_3_desc:0 "Damerian 4 desc"
+ A58_idea_5_3:0 "Damerian 5"
+ A58_idea_5_3_desc:0 "Damerian 5 desc"
+ A58_idea_6_3:0 "Damerian 6"
+ A58_idea_6_3_desc:0 "Damerian 6 desc"
+ A58_idea_7_3:0 "Damerian 7"
+ A58_idea_7_3_desc:0 "Damerian 7 desc"
+
+ B78_ideas_1:0 "Carnetori Ideas 1"
+ B78_ideas_1_start:0 "Carnetori Traditions 1"
+ B78_ideas_1_bonus:0 "Carnetori Ambition 1"
+ B78_idea_1_1:0 "Carnetori 1"
+ B78_idea_1_1_desc:0 "Carnetori 1 desc"
+ B78_idea_2_1:0 "Carnetori 2"
+ B78_idea_2_1_desc:0 "Carnetori 2 desc"
+ B78_idea_3_1:0 "Carnetori 3"
+ B78_idea_3_1_desc:0 "Carnetori 3 desc"
+ B78_idea_4_1:0 "Carnetori 4"
+ B78_idea_4_1_desc:0 "Carnetori 4 desc"
+ B78_idea_5_1:0 "Carnetori 5"
+ B78_idea_5_1_desc:0 "Carnetori 5 desc"
+ B78_idea_6_1:0 "Carnetori 6"
+ B78_idea_6_1_desc:0 "Carnetori 6 desc"
+ B78_idea_7_1:0 "Carnetori 7"
+ B78_idea_7_1_desc:0 "Carnetori 7 desc" 
+
+ B78_ideas_2:0 "Carnetori Ideas 2"
+ B78_ideas_2_start:0 "Carnetori Traditions 2"
+ B78_ideas_2_bonus:0 "Carnetori Ambition 2"
+ B78_idea_1_2:0 "Carnetori 1"
+ B78_idea_1_2_desc:0 "Carnetori 1 desc"
+ B78_idea_2_2:0 "Carnetori 2"
+ B78_idea_2_2_desc:0 "Carnetori 2 desc"
+ B78_idea_3_2:0 "Carnetori 3"
+ B78_idea_3_2_desc:0 "Carnetori 3 desc"
+ B78_idea_4_2:0 "Carnetori 4"
+ B78_idea_4_2_desc:0 "Carnetori 4 desc"
+ B78_idea_5_2:0 "Carnetori 5"
+ B78_idea_5_2_desc:0 "Carnetori 5 desc"
+ B78_idea_6_2:0 "Carnetori 6"
+ B78_idea_6_2_desc:0 "Carnetori 6 desc"
+ B78_idea_7_2:0 "Carnetori 7"
+ B78_idea_7_2_desc:0 "Carnetori 7 desc" 
+
+ B78_ideas_3:0 "Carnetori Ideas 3"
+ B78_ideas_3_start:0 "Carnetori Traditions 3"
+ B78_ideas_3_bonus:0 "Carnetori Ambition 3"
+ B78_idea_1_3:0 "Carnetori 1"
+ B78_idea_1_3_desc:0 "Carnetori 1 desc"
+ B78_idea_2_3:0 "Carnetori 2"
+ B78_idea_2_3_desc:0 "Carnetori 2 desc"
+ B78_idea_3_3:0 "Carnetori 3"
+ B78_idea_3_3_desc:0 "Carnetori 3 desc"
+ B78_idea_4_3:0 "Carnetori 4"
+ B78_idea_4_3_desc:0 "Carnetori 4 desc"
+ B78_idea_5_3:0 "Carnetori 5"
+ B78_idea_5_3_desc:0 "Carnetori 5 desc"
+ B78_idea_6_3:0 "Carnetori 6"
+ B78_idea_6_3_desc:0 "Carnetori 6 desc"
+ B78_idea_7_3:0 "Carnetori 7"
+ B78_idea_7_3_desc:0 "Carnetori 7 desc" 
