--- a/localisation/CoT_i_nations_l_english.yml
+++ b/localisation/CoT_i_nations_l_english.yml
@@ -22,8 +22,8 @@
  W09_ADJ:0 "Esswycker"
  W10:0 "Castellyrian WIP"
  W10_ADJ:0 "Castellyrian"
- W11:0 "Order of the Moon Knights"
- W11_ADJ:0 "Lunar"
+ W11:0 "Orda Dameris"
+ W11_ADJ:0 "Order-Damerian"
  W12:0 "Garioncost"
  W12_ADJ:0 "Garioncoster"
  
