Anbenncóst and friends ideas
Anbenncóst, Damish Temple, Orda Dameris (Moon Knights) and Garioncost. Also made event to change Anbenncóst name to Damecóst when they are no longer a free city

--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -27,6 +27,10 @@
  cot_ideas_upgrade.4.d:0 "TODO"
  CoT_ideagroups.4.a:0 "The Eagle Looms!"
 
+ cot_ideas_upgrade.5.t:0 "TODO"
+ cot_ideas_upgrade.5.d:0 "TODO"
+ CoT_ideagroups.5.a:0 "Not just Anbenncóst"
+
  improved_marines:0 "Improved Marines"
  cot_vassal_econimic:0 "Economy Focus"
  cot_vassal_military:0 "Military Focus"
