--- a/localisation/CoT_i_nations_l_english.yml
+++ b/localisation/CoT_i_nations_l_english.yml
@@ -88,3 +88,9 @@
  lionor_nation_title:0 "Claim the Lion Throne"
  arannor_nation_title:0 "Create the Kingdom of Arannor"
  milcorissia_nation_title:0 "Resurgence of the Milcori"
+
+# Custom nation names
+ DAMECOST_STRING:0 "Damecóst"
+ DAMECOST_STRING_ADJ:0 "Damecóster"
+ REV_DAMECOST_STRING:0 "Revolutionary Damecóst"
+ REV_DAMECOST_STRING_ADJ:0 "Damecóster"
