--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -2046,4 +2046,224 @@
  B78_idea_6_3:0 "Carnetori 6"
  B78_idea_6_3_desc:0 "Carnetori 6 desc"
  B78_idea_7_3:0 "Carnetori 7"
- B78_idea_7_3_desc:0 "Carnetori 7 desc" 
+ B78_idea_7_3_desc:0 "Carnetori 7 desc"
+
+
+ A38_ideas_1:0 "Anbenncost Ideas 1"
+ A38_ideas_1_start:0 "Anbenncost Traditions 1"
+ A38_ideas_1_bonus:0 "Anbenncost Ambition 1"
+ A38_idea_1_1:0 "Anbenncost 1"
+ A38_idea_1_1_desc:0 "Anbenncost 1 desc"
+ A38_idea_2_1:0 "Anbenncost 2"
+ A38_idea_2_1_desc:0 "Anbenncost 2 desc"
+ A38_idea_3_1:0 "Anbenncost 3"
+ A38_idea_3_1_desc:0 "Anbenncost 3 desc"
+ A38_idea_4_1:0 "Anbenncost 4"
+ A38_idea_4_1_desc:0 "Anbenncost 4 desc"
+ A38_idea_5_1:0 "Anbenncost 5"
+ A38_idea_5_1_desc:0 "Anbenncost 5 desc"
+ A38_idea_6_1:0 "Anbenncost 6"
+ A38_idea_6_1_desc:0 "Anbenncost 6 desc"
+ A38_idea_7_1:0 "Anbenncost 7"
+ A38_idea_7_1_desc:0 "Anbenncost 7 desc" 
+
+ A38_ideas_2:0 "Anbenncost Ideas 2"
+ A38_ideas_2_start:0 "Anbenncost Traditions 2"
+ A38_ideas_2_bonus:0 "Anbenncost Ambition 2"
+ A38_idea_1_2:0 "Anbenncost 1"
+ A38_idea_1_2_desc:0 "Anbenncost 1 desc"
+ A38_idea_2_2:0 "Anbenncost 2"
+ A38_idea_2_2_desc:0 "Anbenncost 2 desc"
+ A38_idea_3_2:0 "Anbenncost 3"
+ A38_idea_3_2_desc:0 "Anbenncost 3 desc"
+ A38_idea_4_2:0 "Anbenncost 4"
+ A38_idea_4_2_desc:0 "Anbenncost 4 desc"
+ A38_idea_5_2:0 "Anbenncost 5"
+ A38_idea_5_2_desc:0 "Anbenncost 5 desc"
+ A38_idea_6_2:0 "Anbenncost 6"
+ A38_idea_6_2_desc:0 "Anbenncost 6 desc"
+ A38_idea_7_2:0 "Anbenncost 7"
+ A38_idea_7_2_desc:0 "Anbenncost 7 desc" 
+
+ A38_ideas_3:0 "Anbenncost Ideas 3"
+ A38_ideas_3_start:0 "Anbenncost Traditions 3"
+ A38_ideas_3_bonus:0 "Anbenncost Ambition 3"
+ A38_idea_1_3:0 "Anbenncost 1"
+ A38_idea_1_3_desc:0 "Anbenncost 1 desc"
+ A38_idea_2_3:0 "Anbenncost 2"
+ A38_idea_2_3_desc:0 "Anbenncost 2 desc"
+ A38_idea_3_3:0 "Anbenncost 3"
+ A38_idea_3_3_desc:0 "Anbenncost 3 desc"
+ A38_idea_4_3:0 "Anbenncost 4"
+ A38_idea_4_3_desc:0 "Anbenncost 4 desc"
+ A38_idea_5_3:0 "Anbenncost 5"
+ A38_idea_5_3_desc:0 "Anbenncost 5 desc"
+ A38_idea_6_3:0 "Anbenncost 6"
+ A38_idea_6_3_desc:0 "Anbenncost 6 desc"
+ A38_idea_7_3:0 "Anbenncost 7"
+ A38_idea_7_3_desc:0 "Anbenncost 7 desc" 
+
+
+ W12_ideas_1:0 "Garioncost Ideas 1"
+ W12_ideas_1_start:0 "Garioncost Traditions 1"
+ W12_ideas_1_bonus:0 "Garioncost Ambition 1"
+ W12_idea_1_1:0 "Garioncost 1"
+ W12_idea_1_1_desc:0 "Garioncost 1 desc"
+ W12_idea_2_1:0 "Garioncost 2"
+ W12_idea_2_1_desc:0 "Garioncost 2 desc"
+ W12_idea_3_1:0 "Garioncost 3"
+ W12_idea_3_1_desc:0 "Garioncost 3 desc"
+ W12_idea_4_1:0 "Garioncost 4"
+ W12_idea_4_1_desc:0 "Garioncost 4 desc"
+ W12_idea_5_1:0 "Garioncost 5"
+ W12_idea_5_1_desc:0 "Garioncost 5 desc"
+ W12_idea_6_1:0 "Garioncost 6"
+ W12_idea_6_1_desc:0 "Garioncost 6 desc"
+ W12_idea_7_1:0 "Garioncost 7"
+ W12_idea_7_1_desc:0 "Garioncost 7 desc" 
+
+ W12_ideas_2:0 "Garioncost Ideas 2"
+ W12_ideas_2_start:0 "Garioncost Traditions 2"
+ W12_ideas_2_bonus:0 "Garioncost Ambition 2"
+ W12_idea_1_2:0 "Garioncost 1"
+ W12_idea_1_2_desc:0 "Garioncost 1 desc"
+ W12_idea_2_2:0 "Garioncost 2"
+ W12_idea_2_2_desc:0 "Garioncost 2 desc"
+ W12_idea_3_2:0 "Garioncost 3"
+ W12_idea_3_2_desc:0 "Garioncost 3 desc"
+ W12_idea_4_2:0 "Garioncost 4"
+ W12_idea_4_2_desc:0 "Garioncost 4 desc"
+ W12_idea_5_2:0 "Garioncost 5"
+ W12_idea_5_2_desc:0 "Garioncost 5 desc"
+ W12_idea_6_2:0 "Garioncost 6"
+ W12_idea_6_2_desc:0 "Garioncost 6 desc"
+ W12_idea_7_2:0 "Garioncost 7"
+ W12_idea_7_2_desc:0 "Garioncost 7 desc" 
+
+ W12_ideas_3:0 "Garioncost Ideas 3"
+ W12_ideas_3_start:0 "Garioncost Traditions 3"
+ W12_ideas_3_bonus:0 "Garioncost Ambition 3"
+ W12_idea_1_3:0 "Garioncost 1"
+ W12_idea_1_3_desc:0 "Garioncost 1 desc"
+ W12_idea_2_3:0 "Garioncost 2"
+ W12_idea_2_3_desc:0 "Garioncost 2 desc"
+ W12_idea_3_3:0 "Garioncost 3"
+ W12_idea_3_3_desc:0 "Garioncost 3 desc"
+ W12_idea_4_3:0 "Garioncost 4"
+ W12_idea_4_3_desc:0 "Garioncost 4 desc"
+ W12_idea_5_3:0 "Garioncost 5"
+ W12_idea_5_3_desc:0 "Garioncost 5 desc"
+ W12_idea_6_3:0 "Garioncost 6"
+ W12_idea_6_3_desc:0 "Garioncost 6 desc"
+ W12_idea_7_3:0 "Garioncost 7"
+ W12_idea_7_3_desc:0 "Garioncost 7 desc" 
+
+
+ W11_ideas_1:0 "Orda Dameris Ideas 1"
+ W11_ideas_1_start:0 "Orda Dameris Traditions 1"
+ W11_ideas_1_bonus:0 "Orda Dameris Ambition 1"
+ W11_idea_1_1:0 "Orda Dameris 1"
+ W11_idea_1_1_desc:0 "Orda Dameris 1 desc"
+ W11_idea_2_1:0 "Orda Dameris 2"
+ W11_idea_2_1_desc:0 "Orda Dameris 2 desc"
+ W11_idea_3_1:0 "Orda Dameris 3"
+ W11_idea_3_1_desc:0 "Orda Dameris 3 desc"
+ W11_idea_4_1:0 "Orda Dameris 4"
+ W11_idea_4_1_desc:0 "Orda Dameris 4 desc"
+ W11_idea_5_1:0 "Orda Dameris 5"
+ W11_idea_5_1_desc:0 "Orda Dameris 5 desc"
+ W11_idea_6_1:0 "Orda Dameris 6"
+ W11_idea_6_1_desc:0 "Orda Dameris 6 desc"
+ W11_idea_7_1:0 "Orda Dameris 7"
+ W11_idea_7_1_desc:0 "Orda Dameris 7 desc" 
+
+ W11_ideas_2:0 "Orda Dameris Ideas 2"
+ W11_ideas_2_start:0 "Orda Dameris Traditions 2"
+ W11_ideas_2_bonus:0 "Orda Dameris Ambition 2"
+ W11_idea_1_2:0 "Orda Dameris 1"
+ W11_idea_1_2_desc:0 "Orda Dameris 1 desc"
+ W11_idea_2_2:0 "Orda Dameris 2"
+ W11_idea_2_2_desc:0 "Orda Dameris 2 desc"
+ W11_idea_3_2:0 "Orda Dameris 3"
+ W11_idea_3_2_desc:0 "Orda Dameris 3 desc"
+ W11_idea_4_2:0 "Orda Dameris 4"
+ W11_idea_4_2_desc:0 "Orda Dameris 4 desc"
+ W11_idea_5_2:0 "Orda Dameris 5"
+ W11_idea_5_2_desc:0 "Orda Dameris 5 desc"
+ W11_idea_6_2:0 "Orda Dameris 6"
+ W11_idea_6_2_desc:0 "Orda Dameris 6 desc"
+ W11_idea_7_2:0 "Orda Dameris 7"
+ W11_idea_7_2_desc:0 "Orda Dameris 7 desc" 
+
+ W11_ideas_3:0 "Orda Dameris Ideas 3"
+ W11_ideas_3_start:0 "Orda Dameris Traditions 3"
+ W11_ideas_3_bonus:0 "Orda Dameris Ambition 3"
+ W11_idea_1_3:0 "Orda Dameris 1"
+ W11_idea_1_3_desc:0 "Orda Dameris 1 desc"
+ W11_idea_2_3:0 "Orda Dameris 2"
+ W11_idea_2_3_desc:0 "Orda Dameris 2 desc"
+ W11_idea_3_3:0 "Orda Dameris 3"
+ W11_idea_3_3_desc:0 "Orda Dameris 3 desc"
+ W11_idea_4_3:0 "Orda Dameris 4"
+ W11_idea_4_3_desc:0 "Orda Dameris 4 desc"
+ W11_idea_5_3:0 "Orda Dameris 5"
+ W11_idea_5_3_desc:0 "Orda Dameris 5 desc"
+ W11_idea_6_3:0 "Orda Dameris 6"
+ W11_idea_6_3_desc:0 "Orda Dameris 6 desc"
+ W11_idea_7_3:0 "Orda Dameris 7"
+ W11_idea_7_3_desc:0 "Orda Dameris 7 desc" 
+
+
+ A41_ideas_1:0 "Damish Temple Ideas 1"
+ A41_ideas_1_start:0 "Damish Temple Traditions 1"
+ A41_ideas_1_bonus:0 "Damish Temple Ambition 1"
+ A41_idea_1_1:0 "Damish Temple 1"
+ A41_idea_1_1_desc:0 "Damish Temple 1 desc"
+ A41_idea_2_1:0 "Damish Temple 2"
+ A41_idea_2_1_desc:0 "Damish Temple 2 desc"
+ A41_idea_3_1:0 "Damish Temple 3"
+ A41_idea_3_1_desc:0 "Damish Temple 3 desc"
+ A41_idea_4_1:0 "Damish Temple 4"
+ A41_idea_4_1_desc:0 "Damish Temple 4 desc"
+ A41_idea_5_1:0 "Damish Temple 5"
+ A41_idea_5_1_desc:0 "Damish Temple 5 desc"
+ A41_idea_6_1:0 "Damish Temple 6"
+ A41_idea_6_1_desc:0 "Damish Temple 6 desc"
+ A41_idea_7_1:0 "Damish Temple 7"
+ A41_idea_7_1_desc:0 "Damish Temple 7 desc" 
+
+ A41_ideas_2:0 "Damish Temple Ideas 2"
+ A41_ideas_2_start:0 "Damish Temple Traditions 2"
+ A41_ideas_2_bonus:0 "Damish Temple Ambition 2"
+ A41_idea_1_2:0 "Damish Temple 1"
+ A41_idea_1_2_desc:0 "Damish Temple 1 desc"
+ A41_idea_2_2:0 "Damish Temple 2"
+ A41_idea_2_2_desc:0 "Damish Temple 2 desc"
+ A41_idea_3_2:0 "Damish Temple 3"
+ A41_idea_3_2_desc:0 "Damish Temple 3 desc"
+ A41_idea_4_2:0 "Damish Temple 4"
+ A41_idea_4_2_desc:0 "Damish Temple 4 desc"
+ A41_idea_5_2:0 "Damish Temple 5"
+ A41_idea_5_2_desc:0 "Damish Temple 5 desc"
+ A41_idea_6_2:0 "Damish Temple 6"
+ A41_idea_6_2_desc:0 "Damish Temple 6 desc"
+ A41_idea_7_2:0 "Damish Temple 7"
+ A41_idea_7_2_desc:0 "Damish Temple 7 desc" 
+
+ A41_ideas_3:0 "Damish Temple Ideas 3"
+ A41_ideas_3_start:0 "Damish Temple Traditions 3"
+ A41_ideas_3_bonus:0 "Damish Temple Ambition 3"
+ A41_idea_1_3:0 "Damish Temple 1"
+ A41_idea_1_3_desc:0 "Damish Temple 1 desc"
+ A41_idea_2_3:0 "Damish Temple 2"
+ A41_idea_2_3_desc:0 "Damish Temple 2 desc"
+ A41_idea_3_3:0 "Damish Temple 3"
+ A41_idea_3_3_desc:0 "Damish Temple 3 desc"
+ A41_idea_4_3:0 "Damish Temple 4"
+ A41_idea_4_3_desc:0 "Damish Temple 4 desc"
+ A41_idea_5_3:0 "Damish Temple 5"
+ A41_idea_5_3_desc:0 "Damish Temple 5 desc"
+ A41_idea_6_3:0 "Damish Temple 6"
+ A41_idea_6_3_desc:0 "Damish Temple 6 desc"
+ A41_idea_7_3:0 "Damish Temple 7"
+ A41_idea_7_3_desc:0 "Damish Temple 7 desc" 
