--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -2267,3 +2267,58 @@
  A41_idea_6_3_desc:0 "Damish Temple 6 desc"
  A41_idea_7_3:0 "Damish Temple 7"
  A41_idea_7_3_desc:0 "Damish Temple 7 desc" 
+
+
+ A85_ideas_1:0 "Magisterium Ideas 1"
+ A85_ideas_1_start:0 "Magisterium Traditions 1"
+ A85_ideas_1_bonus:0 "Magisterium Ambition 1"
+ A85_idea_1_1:0 "Magisterium 1"
+ A85_idea_1_1_desc:0 "Magisterium 1 desc"
+ A85_idea_2_1:0 "Magisterium 2"
+ A85_idea_2_1_desc:0 "Magisterium 2 desc"
+ A85_idea_3_1:0 "Magisterium 3"
+ A85_idea_3_1_desc:0 "Magisterium 3 desc"
+ A85_idea_4_1:0 "Magisterium 4"
+ A85_idea_4_1_desc:0 "Magisterium 4 desc"
+ A85_idea_5_1:0 "Magisterium 5"
+ A85_idea_5_1_desc:0 "Magisterium 5 desc"
+ A85_idea_6_1:0 "Magisterium 6"
+ A85_idea_6_1_desc:0 "Magisterium 6 desc"
+ A85_idea_7_1:0 "Magisterium 7"
+ A85_idea_7_1_desc:0 "Magisterium 7 desc" 
+
+ A85_ideas_2:0 "Magisterium Ideas 2"
+ A85_ideas_2_start:0 "Magisterium Traditions 2"
+ A85_ideas_2_bonus:0 "Magisterium Ambition 2"
+ A85_idea_1_2:0 "Magisterium 1"
+ A85_idea_1_2_desc:0 "Magisterium 1 desc"
+ A85_idea_2_2:0 "Magisterium 2"
+ A85_idea_2_2_desc:0 "Magisterium 2 desc"
+ A85_idea_3_2:0 "Magisterium 3"
+ A85_idea_3_2_desc:0 "Magisterium 3 desc"
+ A85_idea_4_2:0 "Magisterium 4"
+ A85_idea_4_2_desc:0 "Magisterium 4 desc"
+ A85_idea_5_2:0 "Magisterium 5"
+ A85_idea_5_2_desc:0 "Magisterium 5 desc"
+ A85_idea_6_2:0 "Magisterium 6"
+ A85_idea_6_2_desc:0 "Magisterium 6 desc"
+ A85_idea_7_2:0 "Magisterium 7"
+ A85_idea_7_2_desc:0 "Magisterium 7 desc" 
+
+ A85_ideas_3:0 "Magisterium Ideas 3"
+ A85_ideas_3_start:0 "Magisterium Traditions 3"
+ A85_ideas_3_bonus:0 "Magisterium Ambition 3"
+ A85_idea_1_3:0 "Magisterium 1"
+ A85_idea_1_3_desc:0 "Magisterium 1 desc"
+ A85_idea_2_3:0 "Magisterium 2"
+ A85_idea_2_3_desc:0 "Magisterium 2 desc"
+ A85_idea_3_3:0 "Magisterium 3"
+ A85_idea_3_3_desc:0 "Magisterium 3 desc"
+ A85_idea_4_3:0 "Magisterium 4"
+ A85_idea_4_3_desc:0 "Magisterium 4 desc"
+ A85_idea_5_3:0 "Magisterium 5"
+ A85_idea_5_3_desc:0 "Magisterium 5 desc"
+ A85_idea_6_3:0 "Magisterium 6"
+ A85_idea_6_3_desc:0 "Magisterium 6 desc"
+ A85_idea_7_3:0 "Magisterium 7"
+ A85_idea_7_3_desc:0 "Magisterium 7 desc" 
