Cannorwake Pass Countries n shit

--- a/localisation/CoT_i_nations_l_english.yml
+++ b/localisation/CoT_i_nations_l_english.yml
@@ -69,6 +69,25 @@
  W32:0 "Eoridcois"
  W32_ADJ:0 "Eorid"
  
+ W33:0 "Sunderaak"
+ W33_ADJ:0 "Sunderaak"
+ W34:0 "Herdbutcha"
+ W34_ADJ:0 "Herdbutcha"
+ W35:0 "Bonemuncha"
+ W35_ADJ:0 "Bonemuncha"
+ W36:0 "Spiketop"
+ W36_ADJ:0 "Spiketop"
+ W37:0 "Garnettoof"
+ W37_ADJ:0 "Garnettoof"
+ W38:0 "Vaenrheim"
+ W38_ADJ:0 "Vaenrheimr"
+ W39:0 "Rageblade"
+ W39_ADJ:0 "Rageblade"
+ W40:0 "Monthavn"
+ W40_ADJ:0 "Monthavnr"
+ W41:0 "Highhold"
+ W41_ADJ:0 "Highholdic"
+ 
  # Formable Decision Loc
  sorncost_nation_title:0 "Reclaim the Sorncost Duchy"
  vinlorn_nation_title:0 "Unite the Winelords!"
