Tretun, MISC fixes

--- a/localisation/anb_cultures_l_english.yml
+++ b/localisation/anb_cultures_l_english.yml
@@ -1,6 +1,7 @@
 ﻿l_english:
  anbennarian:0 "Anbennarian"
  anbenncoster:0 "High Damerian"
+ tretunic:0 "Tretunic"
  west_damerian:0 "West Damerian"
  east_damerian:0 "East Damerian"
  pearlsedger:0 "Pearlsedger"
