--- a/localisation/anb_countries_l_english.yml
+++ b/localisation/anb_countries_l_english.yml
@@ -314,8 +314,8 @@
  B57_ADJ: "Cardesti"
  B58: "Adenica"
  B58_ADJ: "Adenner"
- B59: "Pashainé"
- B59_ADJ: "Pashainéy"
+ B59: "Lunanór"
+ B59_ADJ: "Lunanóri"
  B60:0 "Farraneán"
  B60_ADJ:0 "Farrani"
  B61:0 "The Edhardrachon"
