--- a/localisation/anb_cultures_l_english.yml
+++ b/localisation/anb_cultures_l_english.yml
@@ -19,7 +19,7 @@
  half_elf:0 "Half-elf"
  vanburian:0 "Vanburian"
  themarian:0 "Themarian"
- pashainey:0 "Pashainéy"
+ pashainey:0 "Lunaman"
  havoric:0 "Havoric"
  alenic:0 "Alenic"
  gawedi:0 "Gawedi"
