Tridentsmen and MISC

--- a/localisation/CoT_misc_l_english.yml
+++ b/localisation/CoT_misc_l_english.yml
@@ -2,4 +2,4 @@
  #Cannorwake Misc
  cot_lilac_recovery:0 "Lilac War Recovery" #startup innit
  cot_lilac_recovery_desc:0 "The Lilac wars were brutal beyond belief and our people's cry for relief from the bloodshed has been heard. Now is a time of peace, mourning, and recovery."
- 
+ deruwren_circles:0 "Deruwren Circles"
