Remaining Damerians part 1

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -2322,3 +2322,443 @@
  A85_idea_6_3_desc:0 "Magisterium 6 desc"
  A85_idea_7_3:0 "Magisterium 7"
  A85_idea_7_3_desc:0 "Magisterium 7 desc" 
+
+
+ A04_ideas_1:0 "Aleceria Ideas 1"
+ A04_ideas_1_start:0 "Aleceria Traditions 1"
+ A04_ideas_1_bonus:0 "Aleceria Ambition 1"
+ A04_idea_1_1:0 "FOR THE MARQUIS!"
+ A04_idea_1_1_desc:0 "Aleceria 1 desc"
+ A04_idea_2_1:0 "Finest Footmen Forever Found"
+ A04_idea_2_1_desc:0 "Aleceria 2 desc"
+ A04_idea_3_1:0 "Rallying the People"
+ A04_idea_3_1_desc:0 "Aleceria 3 desc"
+ A04_idea_4_1:0 "Anben, Anbennar"
+ A04_idea_4_1_desc:0 "Aleceria 4 desc"
+ A04_idea_5_1:0 "Between Anbenncóst and Lorentaine"
+ A04_idea_5_1_desc:0 "Aleceria 5 desc"
+ A04_idea_6_1:0 "Silver Tongues"
+ A04_idea_6_1_desc:0 "Aleceria 6 desc"
+ A04_idea_7_1:0 "Familial Rapprochement"
+ A04_idea_7_1_desc:0 "Aleceria 7 desc"
+
+ A04_ideas_2:0 "Aleceria Ideas 2"
+ A04_ideas_2_start:0 "Aleceria Traditions 2"
+ A04_ideas_2_bonus:0 "Aleceria Ambition 2"
+ A04_idea_1_2:0 "FOR THE MARQUIS!"
+ A04_idea_1_2_desc:0 "Aleceria 1 desc"
+ A04_idea_2_2:0 "Finest Footmen Forever Found"
+ A04_idea_2_2_desc:0 "Aleceria 2 desc"
+ A04_idea_3_2:0 "Rallying the People"
+ A04_idea_3_2_desc:0 "Aleceria 3 desc"
+ A04_idea_4_2:0 "Anben, Anbennar"
+ A04_idea_4_2_desc:0 "Aleceria 4 desc"
+ A04_idea_5_2:0 "Between Anbenncóst and Lorentaine"
+ A04_idea_5_2_desc:0 "Aleceria 5 desc"
+ A04_idea_6_2:0 "Silver Tongues"
+ A04_idea_6_2_desc:0 "Aleceria 6 desc"
+ A04_idea_7_2:0 "Familial Rapprochement"
+ A04_idea_7_2_desc:0 "Aleceria 7 desc" 
+
+ A04_ideas_3:0 "Aleceria Ideas 3"
+ A04_ideas_3_start:0 "Aleceria Traditions 3"
+ A04_ideas_3_bonus:0 "Aleceria Ambition 3"
+ A04_idea_1_3:0 "FOR THE MARQUIS!"
+ A04_idea_1_3_desc:0 "Aleceria 1 desc"
+ A04_idea_2_3:0 "Finest Footmen Forever Found"
+ A04_idea_2_3_desc:0 "Aleceria 2 desc"
+ A04_idea_3_3:0 "Rallying the People"
+ A04_idea_3_3_desc:0 "Aleceria 3 desc"
+ A04_idea_4_3:0 "Anben, Anbennar"
+ A04_idea_4_3_desc:0 "Aleceria 4 desc"
+ A04_idea_5_3:0 "Between Anbenncóst and Lorentaine"
+ A04_idea_5_3_desc:0 "Aleceria 5 desc"
+ A04_idea_6_3:0 "Silver Tongues"
+ A04_idea_6_3_desc:0 "Aleceria 6 desc"
+ A04_idea_7_3:0 "Familial Rapprochement"
+ A04_idea_7_3_desc:0 "Aleceria 7 desc" 
+
+
+ A22_ideas_1:0 "Neckcliffe Ideas 1"
+ A22_ideas_1_start:0 "Neckcliffe Traditions 1"
+ A22_ideas_1_bonus:0 "Neckcliffe Ambition 1"
+ A22_idea_1_1:0 "Anbennar's Princely Navy"
+ A22_idea_1_1_desc:0 "Neckcliffe 1 desc"
+ A22_idea_2_1:0 "Finest Footmen Forever Found"
+ A22_idea_2_1_desc:0 "Neckcliffe 2 desc"
+ A22_idea_3_1:0 "Imperial Naval Academy"
+ A22_idea_3_1_desc:0 "Neckcliffe 3 desc"
+ A22_idea_4_1:0 "Anben, Anbennar"
+ A22_idea_4_1_desc:0 "Neckcliffe 4 desc"
+ A22_idea_5_1:0 "Between Anbenncóst and Lorentaine"
+ A22_idea_5_1_desc:0 "Neckcliffe 5 desc"
+ A22_idea_6_1:0 "Silver Tongues"
+ A22_idea_6_1_desc:0 "Neckcliffe 6 desc"
+ A22_idea_7_1:0 "De' 'ardy Officers O' Throatport"
+ A22_idea_7_1_desc:0 "Neckcliffe 7 desc"
+
+ A22_ideas_2:0 "Neckcliffe Ideas 2"
+ A22_ideas_2_start:0 "Neckcliffe Traditions 2"
+ A22_ideas_2_bonus:0 "Neckcliffe Ambition 2"
+ A22_idea_1_2:0 "Anbennar's Princely Navy"
+ A22_idea_1_2_desc:0 "Neckcliffe 1 desc"
+ A22_idea_2_2:0 "Finest Footmen Forever Found"
+ A22_idea_2_2_desc:0 "Neckcliffe 2 desc"
+ A22_idea_3_2:0 "Imperial Naval Academy"
+ A22_idea_3_2_desc:0 "Neckcliffe 3 desc"
+ A22_idea_4_2:0 "Anben, Anbennar"
+ A22_idea_4_2_desc:0 "Neckcliffe 4 desc"
+ A22_idea_5_2:0 "Between Anbenncóst and Lorentaine"
+ A22_idea_5_2_desc:0 "Neckcliffe 5 desc"
+ A22_idea_6_2:0 "Silver Tongues"
+ A22_idea_6_2_desc:0 "Neckcliffe 6 desc"
+ A22_idea_7_2:0 "De' 'ardy Officers O' Throatport"
+ A22_idea_7_2_desc:0 "Neckcliffe 7 desc" 
+
+ A22_ideas_3:0 "Neckcliffe Ideas 3"
+ A22_ideas_3_start:0 "Neckcliffe Traditions 3"
+ A22_ideas_3_bonus:0 "Neckcliffe Ambition 3"
+ A22_idea_1_3:0 "Anbennar's Princely Navy"
+ A22_idea_1_3_desc:0 "Neckcliffe 1 desc"
+ A22_idea_2_3:0 "Finest Footmen Forever Found"
+ A22_idea_2_3_desc:0 "Neckcliffe 2 desc"
+ A22_idea_3_3:0 "Imperial Naval Academy"
+ A22_idea_3_3_desc:0 "Neckcliffe 3 desc"
+ A22_idea_4_3:0 "Anben, Anbennar"
+ A22_idea_4_3_desc:0 "Neckcliffe 4 desc"
+ A22_idea_5_3:0 "Between Anbenncóst and Lorentaine"
+ A22_idea_5_3_desc:0 "Neckcliffe 5 desc"
+ A22_idea_6_3:0 "Silver Tongues"
+ A22_idea_6_3_desc:0 "Neckcliffe 6 desc"
+ A22_idea_7_3:0 "De' 'ardy Officers O' Throatport"
+ A22_idea_7_3_desc:0 "Neckcliffe 7 desc" 
+
+
+ Z05_ideas_1:0 "Tretun Ideas 1"
+ Z05_ideas_1_start:0 "Tretun Traditions 1"
+ Z05_ideas_1_bonus:0 "Tretun Ambition 1"
+ Z05_idea_1_1:0 "Tretun's Men"
+ Z05_idea_1_1_desc:0 "Tretun 1 desc"
+ Z05_idea_2_1:0 "Finest Footmen Forever Found"
+ Z05_idea_2_1_desc:0 "Tretun 2 desc"
+ Z05_idea_3_1:0 "People of the Mace"
+ Z05_idea_3_1_desc:0 "Tretun 3 desc"
+ Z05_idea_4_1:0 "Anben, Anbennar"
+ Z05_idea_4_1_desc:0 "Tretun 4 desc"
+ Z05_idea_5_1:0 "Between Anbenncóst and Lorentaine"
+ Z05_idea_5_1_desc:0 "Tretun 5 desc"
+ Z05_idea_6_1:0 "Silver Tongues"
+ Z05_idea_6_1_desc:0 "Tretun 6 desc"
+ Z05_idea_7_1:0 "Two Things Are Certain, Death and Taxes"
+ Z05_idea_7_1_desc:0 "Tretun 7 desc"
+
+ Z05_ideas_2:0 "Tretun Ideas 2"
+ Z05_ideas_2_start:0 "Tretun Traditions 2"
+ Z05_ideas_2_bonus:0 "Tretun Ambition 2"
+ Z05_idea_1_2:0 "Tretun's Men"
+ Z05_idea_1_2_desc:0 "Tretun 1 desc"
+ Z05_idea_2_2:0 "Finest Footmen Forever Found"
+ Z05_idea_2_2_desc:0 "Tretun 2 desc"
+ Z05_idea_3_2:0 "People of the Mace"
+ Z05_idea_3_2_desc:0 "Tretun 3 desc"
+ Z05_idea_4_2:0 "Anben, Anbennar"
+ Z05_idea_4_2_desc:0 "Tretun 4 desc"
+ Z05_idea_5_2:0 "Between Anbenncóst and Lorentaine"
+ Z05_idea_5_2_desc:0 "Tretun 5 desc"
+ Z05_idea_6_2:0 "Silver Tongues"
+ Z05_idea_6_2_desc:0 "Tretun 6 desc"
+ Z05_idea_7_2:0 "Two Things Are Certain, Death and Taxes"
+ Z05_idea_7_2_desc:0 "Tretun 7 desc" 
+
+ Z05_ideas_3:0 "Tretun Ideas 3"
+ Z05_ideas_3_start:0 "Tretun Traditions 3"
+ Z05_ideas_3_bonus:0 "Tretun Ambition 3"
+ Z05_idea_1_3:0 "Tretun's Men"
+ Z05_idea_1_3_desc:0 "Tretun 1 desc"
+ Z05_idea_2_3:0 "Finest Footmen Forever Found"
+ Z05_idea_2_3_desc:0 "Tretun 2 desc"
+ Z05_idea_3_3:0 "People of the Mace"
+ Z05_idea_3_3_desc:0 "Tretun 3 desc"
+ Z05_idea_4_3:0 "Anben, Anbennar"
+ Z05_idea_4_3_desc:0 "Tretun 4 desc"
+ Z05_idea_5_3:0 "Between Anbenncóst and Lorentaine"
+ Z05_idea_5_3_desc:0 "Tretun 5 desc"
+ Z05_idea_6_3:0 "Silver Tongues"
+ Z05_idea_6_3_desc:0 "Tretun 6 desc"
+ Z05_idea_7_3:0 "Two Things Are Certain, Death and Taxes"
+ Z05_idea_7_3_desc:0 "Tretun 7 desc" 
+
+
+ A45_ideas_1:0 "Istralore Ideas 1"
+ A45_ideas_1_start:0 "Istralore Traditions 1"
+ A45_ideas_1_bonus:0 "Istralore Ambition 1"
+ A45_idea_1_1:0 "Istralari Banshees"
+ A45_idea_1_1_desc:0 "Istralore 1 desc"
+ A45_idea_2_1:0 "Finest Footmen Forever Found"
+ A45_idea_2_1_desc:0 "Istralore 2 desc"
+ A45_idea_3_1:0 "Land of the Marshal"
+ A45_idea_3_1_desc:0 "Istralore 3 desc"
+ A45_idea_4_1:0 "Anben, Anbennar"
+ A45_idea_4_1_desc:0 "Istralore 4 desc"
+ A45_idea_5_1:0 "Land Between the Ear and Bal Hyl"
+ A45_idea_5_1_desc:0 "Istralore 5 desc"
+ A45_idea_6_1:0 "Silver Tongues"
+ A45_idea_6_1_desc:0 "Istralore 6 desc"
+ A45_idea_7_1:0 "Damescross"
+ A45_idea_7_1_desc:0 "Istralore 7 desc"
+
+ A45_ideas_2:0 "Istralore Ideas 2"
+ A45_ideas_2_start:0 "Istralore Traditions 2"
+ A45_ideas_2_bonus:0 "Istralore Ambition 2"
+ A45_idea_1_2:0 "Istralari Banshees"
+ A45_idea_1_2_desc:0 "Istralore 1 desc"
+ A45_idea_2_2:0 "Finest Footmen Forever Found"
+ A45_idea_2_2_desc:0 "Istralore 2 desc"
+ A45_idea_3_2:0 "Land of the Marshal"
+ A45_idea_3_2_desc:0 "Istralore 3 desc"
+ A45_idea_4_2:0 "Anben, Anbennar"
+ A45_idea_4_2_desc:0 "Istralore 4 desc"
+ A45_idea_5_2:0 "Land Between the Ear and Bal Hyl"
+ A45_idea_5_2_desc:0 "Istralore 5 desc"
+ A45_idea_6_2:0 "Silver Tongues"
+ A45_idea_6_2_desc:0 "Istralore 6 desc"
+ A45_idea_7_2:0 "Damescross"
+ A45_idea_7_2_desc:0 "Istralore 7 desc" 
+
+ A45_ideas_3:0 "Istralore Ideas 3"
+ A45_ideas_3_start:0 "Istralore Traditions 3"
+ A45_ideas_3_bonus:0 "Istralore Ambition 3"
+ A45_idea_1_3:0 "Istralari Banshees"
+ A45_idea_1_3_desc:0 "Istralore 1 desc"
+ A45_idea_2_3:0 "Finest Footmen Forever Found"
+ A45_idea_2_3_desc:0 "Istralore 2 desc"
+ A45_idea_3_3:0 "Land of the Marshal"
+ A45_idea_3_3_desc:0 "Istralore 3 desc"
+ A45_idea_4_3:0 "Anben, Anbennar"
+ A45_idea_4_3_desc:0 "Istralore 4 desc"
+ A45_idea_5_3:0 "Land Between the Ear and Bal Hyl"
+ A45_idea_5_3_desc:0 "Istralore 5 desc"
+ A45_idea_6_3:0 "Silver Tongues"
+ A45_idea_6_3_desc:0 "Istralore 6 desc"
+ A45_idea_7_3:0 "Damescross"
+ A45_idea_7_3_desc:0 "Istralore 7 desc" 
+
+
+ A42_ideas_1:0 "Silvelar Ideas 1"
+ A42_ideas_1_start:0 "Silvelar Traditions 1"
+ A42_ideas_1_bonus:0 "Silvelar Ambition 1"
+ A42_idea_1_1:0 "The Silver City"
+ A42_idea_1_1_desc:0 "Silvelar 1 desc"
+ A42_idea_2_1:0 "Finest Footmen Forever Found"
+ A42_idea_2_1_desc:0 "Silvelar 2 desc"
+ A42_idea_3_1:0 "Land of the Marshal"
+ A42_idea_3_1_desc:0 "Silvelar 3 desc"
+ A42_idea_4_1:0 "Anben, Anbennar"
+ A42_idea_4_1_desc:0 "Silvelar 4 desc"
+ A42_idea_5_1:0 "Land Between the Ear and Bal Hyl"
+ A42_idea_5_1_desc:0 "Silvelar 5 desc"
+ A42_idea_6_1:0 "Silver Tongues"
+ A42_idea_6_1_desc:0 "Silvelar 6 desc"
+ A42_idea_7_1:0 "Damescross"
+ A42_idea_7_1_desc:0 "Silvelar 7 desc"
+
+ A42_ideas_2:0 "Silvelar Ideas 2"
+ A42_ideas_2_start:0 "Silvelar Traditions 2"
+ A42_ideas_2_bonus:0 "Silvelar Ambition 2"
+ A42_idea_1_2:0 "The Silver City"
+ A42_idea_1_2_desc:0 "Silvelar 1 desc"
+ A42_idea_2_2:0 "Finest Footmen Forever Found"
+ A42_idea_2_2_desc:0 "Silvelar 2 desc"
+ A42_idea_3_2:0 "Land of the Marshal"
+ A42_idea_3_2_desc:0 "Silvelar 3 desc"
+ A42_idea_4_2:0 "Anben, Anbennar"
+ A42_idea_4_2_desc:0 "Silvelar 4 desc"
+ A42_idea_5_2:0 "Land Between the Ear and Bal Hyl"
+ A42_idea_5_2_desc:0 "Silvelar 5 desc"
+ A42_idea_6_2:0 "Silver Tongues"
+ A42_idea_6_2_desc:0 "Silvelar 6 desc"
+ A42_idea_7_2:0 "Damescross"
+ A42_idea_7_2_desc:0 "Silvelar 7 desc" 
+
+ A42_ideas_3:0 "Silvelar Ideas 3"
+ A42_ideas_3_start:0 "Silvelar Traditions 3"
+ A42_ideas_3_bonus:0 "Silvelar Ambition 3"
+ A42_idea_1_3:0 "The Silver City"
+ A42_idea_1_3_desc:0 "Silvelar 1 desc"
+ A42_idea_2_3:0 "Finest Footmen Forever Found"
+ A42_idea_2_3_desc:0 "Silvelar 2 desc"
+ A42_idea_3_3:0 "Land of the Marshal"
+ A42_idea_3_3_desc:0 "Silvelar 3 desc"
+ A42_idea_4_3:0 "Anben, Anbennar"
+ A42_idea_4_3_desc:0 "Silvelar 4 desc"
+ A42_idea_5_3:0 "Land Between the Ear and Bal Hyl"
+ A42_idea_5_3_desc:0 "Silvelar 5 desc"
+ A42_idea_6_3:0 "Silver Tongues"
+ A42_idea_6_3_desc:0 "Silvelar 6 desc"
+ A42_idea_7_3:0 "Damescross"
+ A42_idea_7_3_desc:0 "Silvelar 7 desc" 
+
+
+ Z40_ideas_1:0 "Acromton Ideas 1"
+ Z40_ideas_1_start:0 "Acromton Traditions 1"
+ Z40_ideas_1_bonus:0 "Acromton Ambition 1"
+ Z40_idea_1_1:0 "Dukes-Crossguard"
+ Z40_idea_1_1_desc:0 "Acromton 1 desc"
+ Z40_idea_2_1:0 "Finest Footmen Forever Found"
+ Z40_idea_2_1_desc:0 "Acromton 2 desc"
+ Z40_idea_3_1:0 "Land of the Marshal"
+ Z40_idea_3_1_desc:0 "Acromton 3 desc"
+ Z40_idea_4_1:0 "Anben, Anbennar"
+ Z40_idea_4_1_desc:0 "Acromton 4 desc"
+ Z40_idea_5_1:0 "Land Between the Ear and Bal Hyl"
+ Z40_idea_5_1_desc:0 "Acromton 5 desc"
+ Z40_idea_6_1:0 "Silver Tongues"
+ Z40_idea_6_1_desc:0 "Acromton 6 desc"
+ Z40_idea_7_1:0 "Damescross"
+ Z40_idea_7_1_desc:0 "Acromton 7 desc"
+
+ Z40_ideas_2:0 "Acromton Ideas 2"
+ Z40_ideas_2_start:0 "Acromton Traditions 2"
+ Z40_ideas_2_bonus:0 "Acromton Ambition 2"
+ Z40_idea_1_2:0 "Dukes-Crossguard"
+ Z40_idea_1_2_desc:0 "Acromton 1 desc"
+ Z40_idea_2_2:0 "Finest Footmen Forever Found"
+ Z40_idea_2_2_desc:0 "Acromton 2 desc"
+ Z40_idea_3_2:0 "Land of the Marshal"
+ Z40_idea_3_2_desc:0 "Acromton 3 desc"
+ Z40_idea_4_2:0 "Anben, Anbennar"
+ Z40_idea_4_2_desc:0 "Acromton 4 desc"
+ Z40_idea_5_2:0 "Land Between the Ear and Bal Hyl"
+ Z40_idea_5_2_desc:0 "Acromton 5 desc"
+ Z40_idea_6_2:0 "Silver Tongues"
+ Z40_idea_6_2_desc:0 "Acromton 6 desc"
+ Z40_idea_7_2:0 "Damescross"
+ Z40_idea_7_2_desc:0 "Acromton 7 desc" 
+
+ Z40_ideas_3:0 "Acromton Ideas 3"
+ Z40_ideas_3_start:0 "Acromton Traditions 3"
+ Z40_ideas_3_bonus:0 "Acromton Ambition 3"
+ Z40_idea_1_3:0 "Dukes-Crossguard"
+ Z40_idea_1_3_desc:0 "Acromton 1 desc"
+ Z40_idea_2_3:0 "Finest Footmen Forever Found"
+ Z40_idea_2_3_desc:0 "Acromton 2 desc"
+ Z40_idea_3_3:0 "Land of the Marshal"
+ Z40_idea_3_3_desc:0 "Acromton 3 desc"
+ Z40_idea_4_3:0 "Anben, Anbennar"
+ Z40_idea_4_3_desc:0 "Acromton 4 desc"
+ Z40_idea_5_3:0 "Land Between the Ear and Bal Hyl"
+ Z40_idea_5_3_desc:0 "Acromton 5 desc"
+ Z40_idea_6_3:0 "Silver Tongues"
+ Z40_idea_6_3_desc:0 "Acromton 6 desc"
+ Z40_idea_7_3:0 "Damescross"
+ Z40_idea_7_3_desc:0 "Acromton 7 desc" 
+
+
+ Z41_ideas_1:0 "Plumwall Ideas 1"
+ Z41_ideas_1_start:0 "Plumwall Traditions 1"
+ Z41_ideas_1_bonus:0 "Plumwall Ambition 1"
+ Z41_idea_1_1:0 "Exporting Liquors"
+ Z41_idea_1_1_desc:0 "Plumwall 1 desc"
+ Z41_idea_2_1:0 "Finest Footmen Forever Found"
+ Z41_idea_2_1_desc:0 "Plumwall 2 desc"
+ Z41_idea_3_1:0 "Land of the Marshal"
+ Z41_idea_3_1_desc:0 "Plumwall 3 desc"
+ Z41_idea_4_1:0 "Anben, Anbennar"
+ Z41_idea_4_1_desc:0 "Plumwall 4 desc"
+ Z41_idea_5_1:0 "Land Between the Ear and Bal Hyl"
+ Z41_idea_5_1_desc:0 "Plumwall 5 desc"
+ Z41_idea_6_1:0 "Silver Tongues"
+ Z41_idea_6_1_desc:0 "Plumwall 6 desc"
+ Z41_idea_7_1:0 "Damescross"
+ Z41_idea_7_1_desc:0 "Plumwall 7 desc"
+
+ Z41_ideas_2:0 "Plumwall Ideas 2"
+ Z41_ideas_2_start:0 "Plumwall Traditions 2"
+ Z41_ideas_2_bonus:0 "Plumwall Ambition 2"
+ Z41_idea_1_2:0 "Exporting Liquors"
+ Z41_idea_1_2_desc:0 "Plumwall 1 desc"
+ Z41_idea_2_2:0 "Finest Footmen Forever Found"
+ Z41_idea_2_2_desc:0 "Plumwall 2 desc"
+ Z41_idea_3_2:0 "Land of the Marshal"
+ Z41_idea_3_2_desc:0 "Plumwall 3 desc"
+ Z41_idea_4_2:0 "Anben, Anbennar"
+ Z41_idea_4_2_desc:0 "Plumwall 4 desc"
+ Z41_idea_5_2:0 "Land Between the Ear and Bal Hyl"
+ Z41_idea_5_2_desc:0 "Plumwall 5 desc"
+ Z41_idea_6_2:0 "Silver Tongues"
+ Z41_idea_6_2_desc:0 "Plumwall 6 desc"
+ Z41_idea_7_2:0 "Damescross"
+ Z41_idea_7_2_desc:0 "Plumwall 7 desc" 
+
+ Z41_ideas_3:0 "Plumwall Ideas 3"
+ Z41_ideas_3_start:0 "Plumwall Traditions 3"
+ Z41_ideas_3_bonus:0 "Plumwall Ambition 3"
+ Z41_idea_1_3:0 "Exporting Liquors"
+ Z41_idea_1_3_desc:0 "Plumwall 1 desc"
+ Z41_idea_2_3:0 "Finest Footmen Forever Found"
+ Z41_idea_2_3_desc:0 "Plumwall 2 desc"
+ Z41_idea_3_3:0 "Land of the Marshal"
+ Z41_idea_3_3_desc:0 "Plumwall 3 desc"
+ Z41_idea_4_3:0 "Anben, Anbennar"
+ Z41_idea_4_3_desc:0 "Plumwall 4 desc"
+ Z41_idea_5_3:0 "Land Between the Ear and Bal Hyl"
+ Z41_idea_5_3_desc:0 "Plumwall 5 desc"
+ Z41_idea_6_3:0 "Silver Tongues"
+ Z41_idea_6_3_desc:0 "Plumwall 6 desc"
+ Z41_idea_7_3:0 "Damescross"
+ Z41_idea_7_3_desc:0 "Plumwall 7 desc"
+
+
+ A33_ideas_1:0 "Vernmen Ideas 1"
+ A33_ideas_1_start:0 "Vernmen Traditions 1"
+ A33_ideas_1_bonus:0 "Vernmen Ambition 1"
+ A33_idea_1_1:0 "Legacy of the Wyvern Riders"
+ A33_idea_1_1_desc:0 "Vernmen 1 desc"
+ A33_idea_2_1:0 "Finest Footmen Forever Found"
+ A33_idea_2_1_desc:0 "Vernmen 2 desc"
+ A33_idea_3_1:0 "Vernid Kingdom, Damerian Republic"
+ A33_idea_3_1_desc:0 "Vernmen 3 desc"
+ A33_idea_4_1:0 "Anben, Anbennar"
+ A33_idea_4_1_desc:0 "Vernmen 4 desc"
+ A33_idea_5_1:0 "Khenaki Wardens"
+ A33_idea_5_1_desc:0 "Vernmen 5 desc"
+ A33_idea_6_1:0 "Silver Tongues"
+ A33_idea_6_1_desc:0 "Vernmen 6 desc"
+ A33_idea_7_1:0 "Moons Surrounded by Roses"
+ A33_idea_7_1_desc:0 "Vernmen 7 desc"
+
+ A33_ideas_2:0 "Vernmen Ideas 2"
+ A33_ideas_2_start:0 "Vernmen Traditions 2"
+ A33_ideas_2_bonus:0 "Vernmen Ambition 2"
+ A33_idea_1_2:0 "Legacy of the Wyvern Riders"
+ A33_idea_1_2_desc:0 "Vernmen 1 desc"
+ A33_idea_2_2:0 "Finest Footmen Forever Found"
+ A33_idea_2_2_desc:0 "Vernmen 2 desc"
+ A33_idea_3_2:0 "Vernid Kingdom, Damerian Republic"
+ A33_idea_3_2_desc:0 "Vernmen 3 desc"
+ A33_idea_4_2:0 "Anben, Anbennar"
+ A33_idea_4_2_desc:0 "Vernmen 4 desc"
+ A33_idea_5_2:0 "Khenaki Wardens"
+ A33_idea_5_2_desc:0 "Vernmen 5 desc"
+ A33_idea_6_2:0 "Silver Tongues"
+ A33_idea_6_2_desc:0 "Vernmen 6 desc"
+ A33_idea_7_2:0 "Moons Surrounded by Roses"
+ A33_idea_7_2_desc:0 "Vernmen 7 desc" 
+
+ A33_ideas_3:0 "Vernmen Ideas 3"
+ A33_ideas_3_start:0 "Vernmen Traditions 3"
+ A33_ideas_3_bonus:0 "Vernmen Ambition 3"
+ A33_idea_1_3:0 "Legacy of the Wyvern Riders"
+ A33_idea_1_3_desc:0 "Vernmen 1 desc"
+ A33_idea_2_3:0 "Finest Footmen Forever Found"
+ A33_idea_2_3_desc:0 "Vernmen 2 desc"
+ A33_idea_3_3:0 "Vernid Kingdom, Damerian Republic"
+ A33_idea_3_3_desc:0 "Vernmen 3 desc"
+ A33_idea_4_3:0 "Anben, Anbennar"
+ A33_idea_4_3_desc:0 "Vernmen 4 desc"
+ A33_idea_5_3:0 "Khenaki Wardens"
+ A33_idea_5_3_desc:0 "Vernmen 5 desc"
+ A33_idea_6_3:0 "Silver Tongues"
+ A33_idea_6_3_desc:0 "Vernmen 6 desc"
+ A33_idea_7_3:0 "Moons Surrounded by Roses"
+ A33_idea_7_3_desc:0 "Vernmen 7 desc" 
