Localisation for events and areas

--- a/localisation/CoT_prov_names_adj_l_english.yml
+++ b/localisation/CoT_prov_names_adj_l_english.yml
@@ -1,4 +1,6 @@
 ﻿l_english:
+ PROV7946:0 "Spiketop"
+ PROV7947:0 "Cavecastle"
  PROV7981:0 "Fanged Cliffs"
  PROV7980:0 "Ragged Ascent"
  PROV7979:0 "Spiderden"
