--- a/localisation/anb_areas_l_english.yml
+++ b/localisation/anb_areas_l_english.yml
@@ -4316,6 +4316,24 @@ theslump_area_adj:0 "Mirelurker"
 lower_dreadmire_area:0 "Lower Dreadmire"
 lower_dreadmire_area_name:0 "Lower Dreadmire"
 lower_dreadmire_area_adj:0 "Mirelurker"
+south_spike_pass_area_name:0 "South Spike Pass"
+south_spike_pass_area_adj:0 "Spiker"
+reachpass_valley_area_name:0 "Reachpass Valley"
+reachpass_valley_area_adj:0 "Reachpasser"
+edgepass_area_name:0 "Edgepass"
+edgepass_area_adj:0 "Edgepasser"
+north_spike_pass_area_name:0 "North Spike Pass"
+north_spike_pass_area_adj:0 "Northern Spiker"
+zarakrod_area_name:0 "Zarakrod"
+zarakrod_area_adj:0 "Zarakroder"
+mountainheart_area_name:0 "Mountainheart"
+mountainheart_area_adj:0 "Mountainhearter"
+rampart_area_name:0 "Rampart"
+rampart_area_adj:0 "Ramparter"
+mirewatch_area_name:0 "Mirewatch"
+mirewatch_area_adj:0 "Mirewatcher"
+harpy_pass_area_name:0 "Harpy Pass"
+harpy_pass_area_adj:0 "Passer"
 
 # CoT Map Adjust
 embergarden_area:0 "Embergarden"
